--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "react-syntax-highlighter": "^15.6.1",
-    "react-toastify": "^11.0.5",
+    "react-toastify": "^11.0.5"
     
   },
   "devDependencies": {
