--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
 "react-dom": "^18.2.0",
-    
+        "uuid": "^11.1.0",
     "react-color": "^2.19.3",
     
     "react-helmet-async": "^2.0.5",
