--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 "react-dom": "^18.2.0",
         "uuid": "^11.1.0",
     "react-color": "^2.19.3",
-    
+        "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.3",
